# lazy-py-crawler

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .prettierignore  DEPLOYMENT_GUIDE.md  DEPLOY_QUICK.md  Dockerfile  PORT_CONFLICT_FIX.md  QUICKSTART.md  README.md  README_NGINX.md  TROUBLESHOOTING.md  alembic.ini  create_superuser.py  deploy-production.sh  deploy.sh  docker-compose-detect.sh  docker-compose.yml  docker-entrypoint.sh  fix-nginx-config.sh  fix-port-conflict.sh  fix_remote_db.sh  pull-and-serve.sh  pyproject.toml  requirements.txt  setup-ssl-production.sh  setup-ssl.sh  setup.py  sign.html  test_p.py  verify-deployment.sh
.github/: main.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  main.yml  pull_request_template.md
app/: adapter.py  admin.py  auth.py  config.py  forms.py  main.py  models.py  upload_views.py  urls.py  views.py
app/database/: __init__.py  db.py  models.py
app/migrations/: 0001_initial.py  0002_alter_user_managers.py  env.py
app/routers/: __init__.py  admin.py  auth.py  blog.py  contact.py  data.py  ds.py  health.py  pages.py  projects.py
app/services/: email_service.py
app/static/: blog.css  cookies.css  robots.txt  toast.js
app/templates/: about.html  admin_blog.html  admin_blog_form.html  admin_contacts.html  base.html  blog.html  blog_detail.html  company.html  contact.html  dashboard.html  faq.html  index.html  login.html  privacy.html  register.html
config/: asgi.py  settings.py  urls.py  wsgi.py
example/: amazon_eletronics.py  playwright_example.py  playwright_test.py
example/booking_com/: booking_com.py
example/definitions/: phrases_one.py  test.py
example/economist_com/: economist_com.py  test.py
example/eisau_com/: eisau_com.py  single_page.py
example/englishelm/: livaroom.py
example/facebook/: collecturls2.py
example/freida_ama_assn_org/: freida_ama_assn_org.py
example/indeed_com/: indeed_com.py  main.py
example/latop10_it/: latop10_it.py
example/login/: login.py
example/mscdirect/: selenium_test.py  trying_playwright.py
example/odresidents_com/: selenium_odresident.py
example/reuturs/: test.py
example/reviews/: reviews.py
example/support_bpro_com_au/: support_bpro_com_au.py
example/test/: test.py  test_again.py
example/uclahealth_org/: uclahealth_org.py
example/www_primark_com/: www_primark_com.py
example/zaubacorp_com/: example.py  zaubacorp_com.py
hamrobazaar/: hamrobazaar.py
hvacshoppers_com/: hvacshoppers_com.py
instgram_login/: instagram_login.py
lazy-py-crawler/: playwright_test.py  try_proxy.py
lazy-py-crawler/LinkedIn/: LinkedIn.py
lazy-py-crawler/amazon_eletronics/: amazon_eletronics.py  log.txt
lazy-py-crawler/cnbc/: cnbc.py
lazy-py-crawler/definitions/: definitions.py  phrases.py  phrases_1.txt  phrases_one.py  test.py
lazy-py-crawler/doctors_cpso_on_ca/: ano.py  app.py  doctors_cpso_on_ca.py  scraped_cpso.py  test.py
lazy-py-crawler/economist_com/: economist_com.py
lazy-py-crawler/elections/: elections.py
lazy-py-crawler/email_scraper/: README  scraped_email.py
lazy-py-crawler/englishelm/: englishelm.py  livaroom.py  livaroom_api.py
lazy-py-crawler/englishelm_com/: englishelm_com.py
lazy-py-crawler/facebook/: amazondownloadmt.py
lazy-py-crawler/getcyberleads_com/: cyberleads.py  func.py  getcyberleads_com.py  save.py  test_2.py
lazy-py-crawler/indeed_com/: indeed_com.py  indeed_s.py  main.py
lazy-py-crawler/jaxa/: jaxa.py
lazy-py-crawler/lickd_co/: lickd.py
lazy-py-crawler/login/: login.py
lazy-py-crawler/mscdirect/: mscdirect.py  selenium_test.py  trying_playwright.py
lazy-py-crawler/nhatot/: nhatot.py  test.py
lazy-py-crawler/odresidents_com/: odresidents.py  selenium_odresident.py
lazy-py-crawler/reddit/: reddit.py
lazy-py-crawler/reuturs/: bloomberg.py  check_len.py  nasdaq.py  reuters.py  test.py  test_1.py  wsj.py
lazy-py-crawler/reviews/: reviews.py  test.py
lazy-py-crawler/sample_data/: sample.py
lazy-py-crawler/shopee/: shopee.py
lazy-py-crawler/stirtshirt_com/: stirtshirt_com.py
lazy-py-crawler/test/: test_again.py  to_send_data_wordpress_api.py
lazy-py-crawler/ucla_edu/: ucla_edu.py
lazy-py-crawler/uclahealth_org/: uclahealth_org.py
lazy-py-crawler/yellow_page/: Dockerfile  playwright_scrapy.py  scraped_yellow.py  yellow.py
lazy-py-crawler/zappos_com/: zappos.py
lazy-py-crawler/zaubacorp_com/: example.py  zaubacorp_com.py
lazy_crawler/api/: auth.py  config.py  db.py  main.py  models.py
lazy_crawler/app/: config.py  main.py
lazy_crawler/crawler/: http.py  items.py  (+4 more)
scrapy_generator_names/: scrapy.cfg
(+122 files in other folders)
