[project]
name = "crawlio"
version = "2.0.1"
description = "A powerful and extensible web crawling framework built with Scrapy and Playwright."
readme = "README.md"
authors = [
    { name = "Pradip Thapa", email = "thapapradip542@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "scrapy>=2.13.4",
    "ipdb==0.13.13",
    "protobuf==5.27.0",
    "ruamel.yaml==0.18.6",
    "s3transfer==0.10.1",
    "pillow==10.3.0",
    "pandas==2.2.2",
    "pdfminer.six==20231228",
    "PyYAML==6.0.1",
    "openpyxl==3.1.3",
    "gspread==6.1.2",
    "oauth2client==4.1.3",
    "playwright==1.44.0",
    "scrapy-playwright==0.0.35",
    "pymongo==4.7.2",
    "python-dotenv==1.0.1",
    "django>=5.0",
    "psycopg2-binary>=2.9.9",
    "django-environ>=0.11.2",
    "django-autoslug>=1.9.9",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=2024.2",
    "django-model-utils>=4.4.0",
    "markdown-it-py>=3.0.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-jose[cryptography]==3.5.0",
    "httpx==0.28.1",
    "google-auth-oauthlib==1.2.3",
    "itsdangerous==2.2.0",
    "aiosmtplib==5.0.0",
    "brotli>=1.2.0",
    "playwright-stealth==2.0.0",
    "django-ckeditor==6.7.3",
    "django-ckeditor-5>=0.2.19",
    "django-allauth>=65.14.1",
    "pyjwt>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/Pradip-p/crawlio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lazy_crawler", "app", "config"]

[tool.hatch.build.targets.sdist]
include = [
    "lazy_crawler",
    "app",
    "config",
    "README.md",
    "LICENSE",
]
